--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 
 
-primer trabajo html
+<heaad>
 
-<head>
+    <TITLE>Es el titulo que apareceen el navegador
+    </TITLE>
+
+</heaad>
 
 </head>
 
 <body>
+    Este es el cuerpo de una pagina web  es la seleccion donde alojo todo el contenido de mi pagina 
 
-
-    <h1> creacion html</h1>
 
 </body>
 
