--- a/pagina.html
+++ b/pagina.html
@@ -19,6 +19,8 @@ alt="imagen de html.">
     <li>desarrollo</li>
 </ul>
 
+<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.xataka.com%2Fbasics%2Fque-html5-que-novedades-ofrece&psig=AOvVaw32No3oVPrwK_kJfeoGG7z-&ust=1692295018513000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCLjPsK7g4YADFQAAAAAdAAAAABAE"></a>
+
 
 </body>
 </html>
