--- a/pagina.html
+++ b/pagina.html
@@ -1,7 +1,14 @@
 <html lang="en">
 
 <head>
+
     <title> just a test page for USB</title>
+
+    <link href="css/estilo.css"rel="stylesheet"
+    type="text/css">
+
+
+
 </head> 
 
 <body>
