--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <td>Harry Deep</td>
                 <td>28</td>
                 <td>britain</td>
+                <tr>
+
+                </tr>
 
 
             <tr>
@@ -42,6 +45,35 @@
             </tr>
         </table>
             
+        </table>
+
+        <table>
+
+            <tr>
+
+                <th>S.N</th>
+                <TH>item</TH>
+                <th>Quamtity</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <tr>aple</tr>
+                <tr>2</tr>
+            <tr>
+            </tr>
+                <td>2</td>
+                <td>mango</td>
+                <td>2</td>
+                <tr>
+
+                </tr>
+
+            <td>3</td>
+            <td>orange</td>
+            <td>1</td>
+
+                </tr>
+            </tr>
         </table>
 
 
