--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             </tr>
         </table>
 
+        <tr>
+            <td colpsam="2">total</td>
+            <td>5</td>
+        </tr>
+
 
 
         
