--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </td>
                 
             <td> es una imagen </td>
-            <td> es una pagina</td>
+            <td> de html</td>
         </tr>
 
     </table>
