--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         <tr>
 
             <td>
-           <tr><img src ="imagene2/html imagen.png"></tr>
+           <tr><img src ="imagenprueba.png"></tr>
            <tr>html</tr>
 
             </td>
                 
             <td> es una imagen </td>
-            <td> de html</td>
+            <td> html</td>
         </tr>
 
     </table>
