--- a/pagina.html
+++ b/pagina.html
@@ -9,44 +9,50 @@
   </head>
 
 <body>
- <h1>html es para paginas web</h1>
+ <h1>¿que es html?
 
-     <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.xataka.com%2Fbasics%2Fque-html5-que-novedades-ofrece&psig=AOvVaw32No3oVPrwK_kJfeoGG7z-&ust=1692295018513000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCLjPsK7g4YADFQAAAAAdAAAAABAE"></a>
-        </a>
+     <a href="https://es.wikipedia.org/wiki/HTML5#/media/Archivo:HTML5_logo_and_wordmark.svg">
+        Official document</a>
        
  </h1>
 
  <img src="imagenes/html imagen.png" 
- alt="imagen de html.">
+ alt="The Firefox logo: a flaming
+ fox surrounding the Earth.">
 
-
- <p>Esta rs una pagina html</p>
- 
+ <p>es un markup language, lo que significa que está escrito con códigos que puede leer una persona sin que sea necesario compilarlo primero. En otras palabras, el texto en una página web está «marcado» con estos códigos para dar instrucciones al navegador web sobre cómo mostrar el texto</p>
 
 
  <ul> 
   <!-- changed to list in the tutorial -->
-    <li>web</li>
-    <li>desarrollo </li>
-    <li>programacion</li>
+    <li>desarrollo web</li>
+    <li>creacion de paginas</li>
+    <li>html</li>
  </ul>
 
 
 
   <p> 
-    <h6>la pagina se va a tratar de como se usa html
+    <h6>imagen de html
     </h6>
    
     <p> 
-        este es un nuevo parrafo amidado
+        link de una imagen de wikipedia
     </p>
    </p>
 
-    <p>proyecto
+    <p>aqui ves algo relacionado con html
+         
+         <a href="https://es.wikipedia.org/wiki/HTML5#/media/Archivo:HTML5_logo_and_wordmark.svg">
+            imagen de html</a> 
+      ,</p>
+
 
 
 </body>
 </html>
+
+
 
 
 
